# clipsync

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clipsync_launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general_issue.yml
.github/workflows/: ci.yml  release.yml  tests.yml
clipsync/: README.md  __init__.py  __main__.py  autostart.py  build.py  clipboard.py  config.py  crypto.py  debug.py  file_transfer.py  filter.py  history.py  main.py  pairing.py  single_instance.py  syncthing.py  ui.py  update.py
clipsync/.github/: FUNDING.yml
tests/: test_cross_os_sync.py  test_crypto.py  test_filter.py  test_history.py  test_image_sync.py  test_linux_paste_freeze.py  test_mac_windows_sync.py  test_pairing.py  test_settings_reload.py  test_syncthing_device_id.py  test_syncthing_hash.py  test_update.py
tests/integration/: test_real_clipboard.py
